# rpo2022

./: README.md
backend/: pom.xml
backend/src/main/java/ru/iu3/backend/controllers/: ArtistController.java  CountryController.java  MuseumController.java  PaintingController.java  SampleController.java  UserController.java
backend/src/main/java/ru/iu3/backend/models/: Artist.java  Country.java  Museum.java  Painting.java  User.java
backend/src/main/java/ru/iu3/backend/repositories/: ArtistRepository.java  CountryRepository.java  MuseumRepository.java  PaintingRepository.java  UserRepository.java
backend/src/main/resources/: application.properties
fclient/app/: build.gradle
fclient/app/src/main/: AndroidManifest.xml
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/app/src/main/java/ru/iu3/fclient/: TransactionEvents.java
fclient/app/src/main/res/values/: themes.xml
fclient/gradle/wrapper/: gradle-wrapper.properties
