# For more information about using CMake with Android Studio, read the
# documentation: https://d.android.com/studio/projects/add-native-code.html

# Sets the minimum version of CMake required to build the native library.

cmake_minimum_required(VERSION 3.18.1)

# Declares and names the project.

project("fclient")

# Creates and names a library, sets it as either STATIC
# or SHARED, and provides the relative paths to its source code.
# You can define multiple libraries, and CMake builds them for you.
# Gradle automatically packages shared libraries with your APK.

add_library( # Sets the name of the library.
        fclient

        # Sets the library as a shared library.
        SHARED

        # Provides a relative path to your source file(s).
        native-lib.cpp)


add_library(spdlog STATIC IMPORTED)
set_target_properties(spdlog PROPERTIES IMPORTED_LOCATION
        C:/Users/d.severov.HQ/BMSTU/rpo/libs/spdlog/build/${ANDROID_ABI}/libspdlog.a)

add_library(mbedcrypto SHARED IMPORTED)
set_target_properties(mbedcrypto PROPERTIES IMPORTED_LOCATION
        C:/Users/d.severov.HQ/BMSTU/rpo/fclient/app/src/main/nativeLibs/${ANDROID_ABI}/libmbedcrypto.so)

target_include_directories(fclient PUBLIC
        C:/Users/d.severov.HQ/BMSTU/rpo/libs/spdlog/spdlog/include
        C:/Users/d.severov.HQ/BMSTU/rpo/libs/mbedtls/mbedtls/include
        )

find_library( # Sets the name of the path variable.
        log-lib

        # Specifies the name of the NDK library that
        # you want CMake to locate.
        log)

target_link_libraries( # Specifies the target library.
        fclient
        spdlog
        mbedcrypto


        # Links the target library to the log library
        # included in the NDK.
        ${log-lib})

